updated max input size
